# usb_can_fd_module

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md
docs/: firmware_todo.md  usb_protocol.md
src/: CMakeLists.txt
src/common/: crc32.c  crc32.h  usb_can_protocol.h
src/drivers/lw_can_kmod/: .gitignore  Makefile  lw_can_protocol.h  main.c
src/rp2354a_firmware/: CMakeLists.txt  can_queue.c  can_queue.h  core0.c  core0.h  core1.c  core1.h  hardware_defs.h  ipc.h  main.c  main.h  tusb_config.h  usb_can.c  usb_can.h  usb_descriptors.c
